fix margin on mobile in mobile

--- a/src/pages/Stack/Stack.css
+++ b/src/pages/Stack/Stack.css
@@ -115,5 +115,9 @@
         padding-left: 5%;
     }
 
+.technologies-container{
+    margin-right: 0px;
+}
+
 
 }
